--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.18.1",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue3-markdown-it": "^1.0.10"
   }
 }
