--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxtjs/supabase": "^0.2.4",
+    "@types/uuid": "^8.3.4",
     "naive-ui": "^2.33.5",
     "nuxt": "3.0.0-rc.13",
     "supabase": "^1.13.0"
@@ -19,6 +20,7 @@
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.18.1",
+    "uuid": "^9.0.0",
     "vue": "^3.2.45",
     "vue3-markdown-it": "^1.0.10"
   }
